# distracted-driver-prediction

./: .gitignore  README.md  pyproject.toml
models/: ann.pth  baseline_model_1.pth  cnn_1.pth  metrics.csv  model_2.pkl  model_3.pkl  model_6.cbm
notebooks/: classical-ml-modeling.ipynb  cnn-1.ipynb  cnn-2.ipynb  cnn-3.ipynb  cnn-4.ipynb  cnn-5.ipynb  cnn-6.ipynb  data-processing.ipynb  preliminary-exploration.ipynb  resnet18-1.ipynb  resnet18-full-fine-tuning.ipynb  vgg-11-bn-last-layer.ipynb  vgg-11-last-layer.ipynb  vgg-16-4.ipynb  vgg-16-full-fine-tune.ipynb  vgg-16-weight-decay-2.ipynb  vgg-16-weight-decay.ipynb  vgg-16.ipynb  visiontransformer.ipynb
src/: ann.py  baselineModel.py  datasets.py  generating-test-predictions.py  main.py  metricsLogger.py  predictionGeneration.py
