[tool.poetry]
name = "Distracted Driver Prediction"
version = "0.1.0"
description = "Using machine learning to predict whether a driver is distracted or not."
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
opencv-python = "^4.10.0"
scikit-learn = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
